# Netlist2Hypergraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot.py
port/: nl.port
src/: acyclic.cpp  acyclic.hpp  database.hpp  main.cpp  parser.cpp  parser.hpp
